tests/rosetta/out/Fortran/cartesian-product-of-two-or-more-lists-1.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program cartesian_product_of_two_or_more_lists_1
  implicit none
    integer, allocatable, dimension(:) :: p
    integer :: x
    integer :: i0
      integer :: y
      integer :: i1
        integer, allocatable, dimension(:) :: app2
    character(len=100) :: s
    integer :: i
      integer :: row
      integer :: j
        character(len=100) :: s3
  call main()
  
  contains
  recursive integer function cart2(a,b) result(res)
    integer, intent(in) :: a
    integer, intent(in) :: b
    allocate(p(0))
    do i0 = 1, size(a)
      x = a(i0)
      do i1 = 1, size(b)
        y = b(i1)
        if (allocated(app2)) deallocate(app2)
        allocate(app2(size(p)+1))
        app2(1:size(p)) = p
        app2(size(p)+1) = (/x,y/)
        p = app2
      end do
    end do
    res = p
    return
  end function cart2
  recursive character(len=100) function llStr(lst) result(res)
    integer, intent(in) :: lst
    s = '['
    i = 0
    do while ((i < size(lst)))
      row = lst(((i)+1))
      s = s // '['
      j = 0
      do while ((j < size(row)))
        write(s3,'(G0)') row(((j)+1))
        s = (s + s3)
        if (((j < size(row)) - 1)) then
          s = s // ' '
        end if
        j = (j + 1)
      end do
      s = s // ']'
      if (((i < size(lst)) - 1)) then
        s = s // ' '
      end if
      i = (i + 1)
    end do
    s = s // ']'
    res = s
    return
  end function llStr
  recursive subroutine main()
    print *, llStr(cart2((/1,2/),(/3,4/)))
    print *, llStr(cart2((/3,4/),(/1,2/)))
    print *, llStr(cart2((/1,2/),(//)))
    print *, llStr(cart2((//),(/1,2/)))
  end subroutine main
end program cartesian_product_of_two_or_more_lists_1
